# xgboost-ecommerce-forecasting

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_prediction.yml
notebooks/: EcommenceSpend_XGBoost_010226.ipynb
src/: database.py  extractor.py  main.py  model.py  output.py  processing.py  streamlit_app.py
src/ecommerce_prediction/: main.py
